muleplapeli/src/main/resources/api/examples/errors/500.raml
#%RAML 1.0 NamedExample

meta:
  status: failed
  messages:
    - 
      code: "INTERNAL_ERROR"
      level: error
      description: "Oups... Something wrong on the server! Please contact the administrator to report the issue."